changed connective symbols; changed substitution notation for trees; removed ND sections; deleted some file in an attempt to fix ToC

--- a/Latex-Files/forallx-ubc-app-quickreference.tex
+++ b/Latex-Files/forallx-ubc-app-quickreference.tex
@@ -317,6 +317,7 @@ for any \script{a}
 
 \end{multicols}
 
+\begin{comment}
 \textbf{\large Identity Rules} (chapter \ref{ch.identity})
 
 
@@ -633,3 +634,4 @@ $[(\metaA{}\eif\metaB{})\eand(\metaB{}\eif\metaA{})] \Longleftrightarrow (\metaA
 \textsc{Quantifier Negation} (QN)\\
 $\enot\forall\script{x}\metaA{} \Longleftrightarrow \exists\script{x}\enot\metaA{}$\\
 $\enot\exists\script{x}\metaA{} \Longleftrightarrow \forall\script{x}\enot\metaA{}$
+\end{comment}
