--- a/Latex-Files/forallx-ubc-app-solutions.tex
+++ b/Latex-Files/forallx-ubc-app-solutions.tex
@@ -3,7 +3,7 @@
 \label{app.solutions}
 
 Many of the exercises may be answered correctly in different ways. Where that is the case, the solution here represents one possible correct answer.
-\phantomsection
+%\phantomsection
 \solutionsection{ch.intro}
 % Chapter 1 Part A
 \solutionpart{ch.intro}{pr.Sentences1}
@@ -891,258 +891,6 @@ single branches}
 \have{3}{N \eor C}\ne{a1-a5, a1-a6}
 \end{ndproof}
 
-% Chapter 7 Part B
-\solutionpart{ch.ND.proofs}{pr.solvedSLproofs}
-%Give a proof for each argument in SL.
-\begin{earg}
-\item%$K\eand L$, \therefore $K\eiff L$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{a1}{K\eand L} \want{K\eiff L}
-	\open
-		\hypo{b1}{K} \want{L}
-		\have{b2}{L} \ae{a1}
-	\close
-	\have{kl}{K \eif L} \ci{b1-b2}
-	\open
-		\hypo{c1}{L} \want{K}
-		\have{c2}{K} \ae{a1}
-	\close
-	\have{lk}{L \eif K} \ci{c1-c2}
-	\have{d1}{K \eiff L} \bi{kl,lk}
-\end{ndproof}
-\end{solutioninlist}
-
-\item%$A\eif (B\eif C)$, \therefore $(A\eand B)\eif C$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{a1}{A\eif (B\eif C)} \want{(A\eand B)\eif C}
-	\open
-		\hypo{b1}{A\eand B} \want{C}
-		\have{b2}{A} \ae{b1}
-		\have{b3}{B\eif C} \ce{a1,b2}
-		\have{b4}{B} \ae{b1}
-		\have{b5}{C} \ce{b3, b4}
-	\close
-	\have{c}{(A\eand B)\eif C} \ci{b1-b5}
-\end{ndproof}
-\end{solutioninlist}
-\item%$P \eand (Q\eor R)$, $P\eif \enot R$, \therefore $Q\eor E$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{a1}{P \eand (Q\eor R)}
-	\hypo{a2}{P\eif \enot R} \want{Q\eor E}
-	\have{a3}{P} \andE{a1}
-	\have{a4}{\enot R} \ifE{a2,a3}
-	\have{a5}{Q\eor R} \andE{a1}
-	\have{a6}{Q} \orE{a4,a5}
-	\have{c}{Q\eor E} \orI{a6}
-\end{ndproof}
-\end{solutioninlist}
-\item%$(C\eand D)\eor E$, \therefore $E\eor D$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{a1}{(C\eand D)\eor E} \want{E\eor D}
-	\open
-		\hypo{b1}{\enot E} \want{D}
-		\have{b2}{C\eand D} \oe{a1,b1}
-		\have{b3}{D} \ae{b2}
-	\close
-	\have{c1}{\enot E\eif D} \ci{b1-b3}
-	\have{c2}{E\eor D} \by{MC}{c1}
-\end{ndproof}
-\end{solutioninlist}
-\item%$\enot F\eif G$, $F\eif H$, \therefore $G\eor H$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{a1}{\enot F\eif G}
-	\hypo{a2}{F\eif H} \want{G\eor H}
-	\open
-		\hypo{b1}{\enot G} \want{H}
-		\have{b2}{\enot\enot F} \by{MT}{a1,b1}
-		\have{b3}{F} \by{DN}{b2}
-		\have{b4}{H} \ce{a2,b3}
-	\close
-	\have{c1}{\enot G \eif H} \ci{b1-b4}
-	\have{c2}{G\eor H} \by{MC}{c1}
-\end{ndproof}
-\end{solutioninlist}
-\item%$(X\eand Y)\eor(X\eand Z)$, $\enot(X\eand D)$, $D\eor M$ \therefore $M$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{a1}{(X\eand Y)\eor(X\eand Z)}
-	\hypo{a2}{\enot(X\eand D)}
-	\hypo{a3}{D\eor M} \want{M}
-	\open
-		\hypo{b1}{\enot X} \by{for \emph{reductio}}{}
-		\have{b2}{\enot X\eor \enot Y} \oi{b1}
-		\have{b3}{\enot (X \eand Y)} \by{DeM}{b2}
-		\have{b4}{X\eand Z} \oe{a1,b3}
-		\have{b5}{X} \ae{b4}
-		\have{b6}{\enot X} \by{R}{b1}
-	\close
-	\have{c}{X} \ne{b1-b5, b1-b6}
-	\open
-		\hypo{d1}{\enot M} \by{for \emph{reductio}}{}
-		\have{d2}{D} \oe{a3,d1}
-		\have{d3}{X\eand D} \ai{c,d2}
-		\have{d4}{\enot(X\eand D)} \by{R}{a2}
-	\close
-	\have{e}{M} \ne{d1-d3, d1-d4}
-\end{ndproof}
-\end{solutioninlist}
-\end{earg}
-%
-
-% Chapter 7 Part D
-\solutionpart{ch.ND.proofs}{pr.SLND.theorems}
-
-\begin{earg}
-\item \begin{solutioninlist}
-%$O \eif O$
-\begin{ndproof}
-	\open
-		\hypo{o1}{O}\want{O}
-		\have{o2}{O}\by{R}{o1}
-	\close
-	\have{o3}{O \eif O}\ci{o1-o2}
-\end{ndproof}
-\end{solutioninlist}
-\item \begin{solutioninlist}
-%$N \eor \enot N$
-\begin{ndproof}
-	\open
-		\hypo{nnon}{\enot (N \eor \enot N)}\by{for \emph{reductio}}{}
-		\have{nnnn}{\enot N \eand \enot\enot N}\by{DeM}{nnon}
-		\have{n}{\enot N}\ae{nnnn}
-		\have{nn}{\enot\enot N}\ae{nnnn}
-	\close
-	\have{nonn}{N \eor \enot N}\ne{nnon-n,nnon-nn}
-\end{ndproof}
-\end{solutioninlist}
-\item \begin{solutioninlist}
-%$\enot(P\eand \enot P)$
-\begin{ndproof}
-	\open
-		\hypo{panp}{P \eand \enot P}\by{for \emph{reductio}}{}
-		\have{p}{P}\ae{panp}
-		\have{np}{\enot P}\ae{panp}
-	\close
-	\have{npanp}{\enot (P \eand \enot P)}\ni{panp-p,panp-np}
-\end{ndproof}
-\end{solutioninlist}
-\item %$\enot(A \eif \enot C) \eif (A \eif C)$
-\begin{solutioninlist}
-\begin{ndproof}
-	\open
-		\hypo{nainc}{\enot (A \eif \enot C)}\want{A \eif C}
-		\open
-			\hypo{a}{A}\want{C}{}
-			\have{nnaonc}{\enot (\enot A \eor \enot C)}\by{MC}{nainc}
-			\have{nnaannc}{\enot \enot A \eand \enot \enot C}\by{DeM}{nnaonc}
-			\have{nnaac}{\enot \enot A \eand C}\by{DN}{nnaannc}
-			\have{c}{C}\ae{nnaac}
-		\close
-		\have{aic}{A \eif C}\ci{a-c}
-	\close
-	\have{nainciaic}{\enot (A \eif \enot C) \eif (A \eif C) }\ci{nainc-aic}
-\end{ndproof}
-\end{solutioninlist}
-\item %$J \eiff [J\eor (L\eand\enot L)]$
-\begin{solutioninlist}
-\begin{ndproof}
-	\open
-		\hypo{j}{J}\want {J\eor (L\eand\enot L)}
-		\have{joblah}{J\eor (L\eand\enot L)}\oi{j}
-	\close
-	\have{jijblah}{J \eif [J\eor (L\eand\enot L)]}\ci{j-joblah}
-	\open
-		\hypo{jblah2}{J\eor (L\eand\enot L)}\want{J}
-		\open
-			\hypo{nj}{\enot J}\by{for \emph{reductio}}{}
-			\have{lanl}{L \eand \enot L}\oe{jblah2, nj}
-			\have{l}{L}\ae{lanl}
-			\have{nl}{\enot L}\ae{lanl}
-		\close
-		\have{j2}{J}\ne{nj-l,nj-nl}
-	\close
-	\have{jblahij}{(J\eor (L\eand\enot L)) \eif J}\ci{jblah2-j2}
-	\have{jiffjblah}{J \eiff [J\eor (L\eand\enot L)]}\bi{jijblah,jblahij}
-\end{ndproof}
-\end{solutioninlist}
-\end{earg}
-
-% Chapter 7 Part F
-\solutionpart{ch.ND.proofs}{pr.solvedSLproofs2}
-\begin{earg}
-\item % $M \eand (\enot N \eif \enot M) \vdash (N \eand M) \eor \enot M$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{1}{M\eand(\enot N \eif \enot M)}\want{(N \eand M) \eor \enot M}
-	\have{2}{M}\ae{1}
-	\have{3}{\enot N \eif \enot M}\ae{1}
-	\have{4}{\enot \enot M}\by{DN}{2}
-	\have{5}{\enot \enot N}\by{MT}{3, 4}
-	\have{6}{N}\by{DN}{5}
-	\have{7}{N \eand M}\ai{6,2}
-	\have{8}{(N \eand M) \eor \enot M}\oi{7}
-\end{ndproof}
-\end{solutioninlist}
-\item %  \{$C\eif(E\eand G)$, $\enot C \eif G$\} $\vdash$ $G$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{1}{C \eif (E \eand G)}
-	\hypo{2}{\enot C \eif G}\want{G}
-	\open
-		\hypo{3}{\enot G}\by{for \emph{reductio}}{}
-		\have{4}{\enot \enot C}\by{MT}{2,3}
-		\have{5}{C}\by{DN}{4}
-		\have{6}{E \eand G}\ce{1,5}
-		\have{7}{G}\ae{6}
-		\have{8}{\enot G}\by{R}{3}
-	\close
-	\have{9}{G}\ne{3-7,3-8}
-\end{ndproof}
-\end{solutioninlist}
-\item % \{$(Z\eand K)\eiff(Y\eand M)$, $D\eand(D\eif M)$\} $\vdash$ $Y\eif Z$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{1}{(Z \eand K) \eiff (Y \eand M)}
-	\hypo{2}{D \eand (D \eif M)}\want{Y \eif Z}
-	\have{3}{D \eif M}\ae{2}
-	\have{4}{D}\ae{2}
-	\have{5}{M}\ce{3,4}
-	\open
-		\hypo{6}{Y}\want{Z}
-		\have{7}{Y \eand M}\ai{6,5}
-		\have{8}{Z \eand K}\be{1,7}
-		\have{9}{Z}\ae{8}
-	\close
-	\have{10}{Y \eif Z}\ci{6-9}
-\end{ndproof}
-\end{solutioninlist}
-\item % \{$(W \eor X) \eor (Y \eor Z)$, $X\eif Y$, $\enot Z$\} $\vdash$ $W\eor Y$
-\begin{solutioninlist}
-\begin{ndproof}
-	\hypo{1}{(W \eor X) \eor (Y \eor Z)}
-	\hypo{2}{X \eif Y}
-	\hypo{3}{\enot Z}\want{W \eor Y}
-	\open
-		\hypo{4}{\enot (W \eor Y)}\by{for \emph{reductio}}{}
-		\have{5}{\enot W \eand \enot Y}\by{DeM}{4}
-		\have{6}{\enot Y}\ae{5}
-		\have{7}{\enot W}\ae{5}
-		\have{8}{\enot X}\by{MT}{2,6}
-		\have{9}{\enot W \eand \enot X}\ai{7,8}
-		\have{10}{\enot (W \eor X)}\by{DeM}{9}
-		\have{11}{Y \eor Z}\oe{1,10}
-		\have{12}{Z}\oe{11,6}
-		\have{13}{\enot Z}\by{R}{3}
-	\close
-	\have{14}{W \eor Y}\ne{4-12,4-13}
-\end{ndproof}
-\end{solutioninlist}
-\end{earg}
 
 \solutionsection{ch.QL}
 % Chapter 8 Part B
