--- a/Latex-Files/forallx-ubc.tex
+++ b/Latex-Files/forallx-ubc.tex
@@ -37,7 +37,7 @@
 \setlength{\parskip}{1em}
 
 
- \includepdf[page=-]{forallx-frontcover.pdf}
+% \includepdf[page=-]{forallx-frontcover.pdf}
 
 \include{forallx-ubc-frontmatter}
 \include{forallx-ubc-preface}
@@ -52,13 +52,12 @@
 \include{forallx-ubc-4-SLmodels}
 \include{forallx-ubc-5-SLtrees}
 \include{forallx-ubc-6-SLsoundcomplete}
-\include{forallx-ubc-7-SLND}
 \include{forallx-ubc-8-predicate}
 \include{forallx-ubc-9-QLmodels}
 \include{forallx-ubc-10-QLtrees}
 \include{forallx-ubc-11-QLsoundcomplete}
-\include{forallx-ubc-12-identity}
-\include{forallx-ubc-13-QLND}
+%\include{forallx-ubc-12-identity}
+%\include{forallx-ubc-13-QLND}
 \appendix
 \include{forallx-ubc-app-notation}
 \include{forallx-ubc-app-solutions}
